--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Web Learning</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="stlye.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -46,9 +46,310 @@
                 </div>
             </div>
         </nav>
+
+        <!--slider start-->
+        <section>
+            <div class="slider mt-5 vh-100 d-flex align-items-center justify-content-center text-dark">
+
+                <div class="row">
+                    <div class="col-lg-6 mx-auto text-center">
+                        <div>
+                            <h1 class="display-4">Get Started Digital
+                                Learning</h1>
+                            <p>It is a long established fact that a reader will be distracted by the
+                                readable
+                                content of a page when looking at its layout.
+
+                            </p>
+                            <div class="btn btn-info">Get Started</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </header>
+    <!--slider end-->
+    <main>
+        <!--Course section start-->
+        <section>
+            <div class="continer">
+                <div class="row">
+                    <div class="col-md-8 mx-auto text-center g-5">
+                        <h2>Discover Our Popular
+                            Courses</h2>
+                        <p>It is a long established fact that a reader will be distracted by the readable
+                            content of a page when looking at its layout.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row row-cols-lg-2">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                    <p class="card-text">Some quick example text to build on the card title
+                                        and make up the bulk of the card.</p>
+                                    <h6 class="text-info">Price : 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Javascript Basic to advanced</h5>
+                                    <p class="card-text">Some quick example text to build on the card title
+                                        and make up the bulk of the card.</p>
+                                    <h6 class="text-info">Price : 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fullstack Web Development</h5>
+                                    <p class="card-text">Some quick example text to build on the card title
+                                        and make up the bulk of the card.</p>
+                                    <h6 class="text-info">Price : 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Digital Marketing</h5>
+                                    <p class="card-text">Some quick example text to build on the card title
+                                        and make up the bulk of the card.</p>
+                                    <h6 class="text-info">Price : 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Photography Basic Rules</h5>
+                                    <p class="card-text">Some quick example text to build on the card title
+                                        and make up the bulk of the card.</p>
+                                    <h6 class="text-info">Price : 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Motion Graphics</h5>
+                                    <p class="card-text">Some quick example text to build on the card title
+                                        and make up the bulk of the card.</p>
+                                    <h6 class="text-info">Price : 20$</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="btn btn-primary">See More Courses</button>
+            </div>
+
+        </section>
+        <!--Course section end-->
+        <!--Bonous section start-->
+        <section style="height: 300px;"
+            class="Container d-flex justify-content-center align-items-center bg-secondary rounded-3" id="subscribe">
+            <div>
+                <h2>Ready to join?</h2>
+                <p>It is a long established fact that a reader will be distracted by the
+                    readable content of a page when looking at its layout.</p>
+                <form>
+                    <div class="mb-3">
+
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#staticBackdrop">
+                            Register
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                            tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        ...
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Understood</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+        </section>
+        <!--Bonous section end-->
+        <!--Accordion section start-->
+        <section>
+            <div class=" mt-5  d-flex align-items-center justify-content-center text-dark">
+                <div class="row">
+                    <div class="col-lg-6 mx-auto text-center">
+                        <h2>Frequently Asked Questions</h2>
+                        It is a long established fact that a reader will be distracted by the readable
+                        content of a page when looking at its layout.
+                    </div>
+                </div>
+        </section>
+        <section>
+            <div class=" mt-5  d-flex align-items-center justify-content-center text-dark">
+                <div class="row">
+                    <div class="col-lg-6 mx-auto text-center">
+                        <div class="accordion" id="accordionPanelsStayOpenExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                                        aria-controls="panelsStayOpen-collapseOne">
+                                        What is the difference between Flexbox and Grid?
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                                    aria-labelledby="panelsStayOpen-headingOne">
+                                    <div class="accordion-body">
+                                        <strong>Grid is made for two-dimensional layout while Flexbox is for one. This
+                                            means Flexbox can work on either row or columns at a time, but Grids can
+                                            work on both. Flexbox, gives you more flexibility while working on either
+                                            element (row or column). HTML markup and CSS will be easy to manage in this
+                                            type of scenario.
+                                            accordion-body,though the transition does limit overflow.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                                        aria-controls="panelsStayOpen-collapseTwo">
+                                        What is the difference between Bootstrap and Tailwind?
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                                    aria-labelledby="panelsStayOpen-headingTwo">
+                                    <div class="accordion-body">
+                                        <strong>Bootstrap comes with a set of pre-styled responsive, mobile-first
+                                            components that possess a definite UI kit. Tailwind CSS uses a set of
+                                            utility classes to create a neat UI with more flexibility and uniqueness.
+                                            Sites created using Bootstrap follow the generic pattern that makes them
+                                            look identical.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                                        aria-controls="panelsStayOpen-collapseThree">
+                                        What is css box model?
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                                    aria-labelledby="panelsStayOpen-headingThree">
+                                    <div class="accordion-body">
+                                        <strong>In CSS, the term "box model" is used when talking about design and
+                                            layout. The CSS box model is essentially a box that wraps around every HTML
+                                            element.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                                        aria-controls="panelsStayOpen-collapseThree">
+                                        What is a semantic tag?
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                                    aria-labelledby="panelsStayOpen-headingThree">
+                                    <div class="accordion-body">
+                                        <strong>The HTML semantics refers to the tags that provide meaning to an HTML
+                                            page rather than just presentation. It makes HTML more comprehensible by
+                                            better defining the different sections and layout of web pages.
+                                    </div>
+                                </div>
+                            </div>
+        </section>
+        <!--Accordion section end-->
+        <section>
+            <div class="continer">
+                <div class="row">
+                    <div class="col-lg-7 mx-auto text-center vh-0">
+                        <h1>Trusted by over 800+ companies</h1>
+                        <img src="images/company/company-1.png" alt="">
+                        <img src="images/company/company-2.png" alt="">
+                        <img src="images/company/company-3.png" alt="">
+                        <img src=" images/company/company-4.png" alt="">
+                        <img src="images/company/company-5.png" alt="">
+                        <img src="images/company/company-6.png" alt="">
+                    </div>
+
+                </div>
+        </section>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
             crossorigin="anonymous"></script>
 </body>
+<!-- Footer-section-end -->
+<footer>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-7 mx-auto text-center bg-dark text-light">
+                <h2>Web Learning</h2>
+                <p>Office 41, Zawaya Buildin, Ghala Muscat,</p>
+
+                <p> Sultanate of Oman</p>
+                <p>Privacy Ploicy | Terms of use</p>
+            </div>
+        </div>
+    </div>
+
+
+
+</footer>
+
+<!-- Footer-section-end -->
 
 </html>
